# py_packaging_template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
code/: __init__.py  datetime_intel.py  gadget.py
