[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "py_package_template"
description = "A sample python package to start sharing your code with the world"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
                "trafilatura"
                ]