[metadata]
name = py_packaging_template
version = 0.0.2
author = Thinh Vu
author_email = mrthinh@live.com
description = A sample python package to start sharing your code with the world
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/py_packaging_template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
